--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-multi-carousel": "^2.5.5",
+    "react-player": "^2.4.0",
+    "react-responsive-modal": "^5.0.2",
+    "react-scripts": "3.4.1",
+    "react-scroll-button": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
